worked on implementing shape wrapper functionality with trapezoid shape type and added points parameter to customize the shape. Also updated example and tests accordingly.

--- a/shape_wrapper/pubspec.yaml
+++ b/shape_wrapper/pubspec.yaml
@@ -1,7 +1,7 @@
 name: shape_wrapper
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
+homepage: "https://github.com/anenigma82/flutter-shape-wrapper"
 
 environment:
   sdk: ^3.8.1
@@ -20,7 +20,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+#flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
